css/style.css
@charset 'utf-8';
@import url('https://fonts.googleapis.com/css?family=Share:400i,700i');
@import url('bootstrap.min.css');

html, body {
    height: 100%;
}

body {
    display: flex;
    flex-flow: row;
    justify-content: center;
    overflow-x: hidden;
}

.cover-site {
    min-width: 100%;
    min-height: 100%;
    position: fixed;
    background: url('../img/background.jpg') no-repeat;
    background-position: center;
    background-size: cover;
    transition: background-image 1s;
    background-position: center;
    background-attachment: fixed;
}

#bgCover {
    min-width: 100%;
    min-height: 100%;
    position: absolute;
    background-position: center;
    background-size: cover;
    transition: background-image 1s;
    background-position: center;
    background-attachment: fixed;
    z-index: 1;
}

.bg-mask {
    min-width: 100%;
    min-height: 100%;
    position: absolute;
    background: radial-gradient(rgba(0, 0, 0, .5) 20%, #000 85%);
    z-index: 2;
}

.web-player {
    height: 100%;
    color: #fff;
    padding: 5px;
    position: relative;
    z-index: 3;
    margin-top: 25px;
}

.cover-album {
    max-width: 80%;
    margin: auto;
    background: url('../img/bg-capa.jpg') no-repeat;
    background-size: cover;
    border: 1px solid #383838;
    box-shadow: 0px 5px 10px 3px rgba(0, 0, 0, 0.4);
    transition: background-image 1s;
    margin-bottom: 15px;
}

.watermark {
    width: 89px;
    height: 35px;
    background: url(../img/logo.png) no-repeat;
    background-size: auto 35px;
    opacity: 0.5;
    position: relative;
    bottom: 36px;
    right: -1px;
    z-index: 5;
}

#currentCoverArt {
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    transition: background-image 1s;
}

.logo {
    display: none;
}

.info-current-song {
    font-family: 'Share', sans-serif;
    text-align: center;
}

.info-current-song h2 {
    font-size: 22px;
    font-weight: 700;
}

.info-current-song h3 {
    font-size: 18px;
    font-weight: 400;
}

.play-pause {
    font-size: 65px;
}

.play-pause i {
    cursor: pointer;
}

.volume-icon {
    font-size: 28px;
    margin-top: -5px;
}

.volume-slide {
    line-height: 35px;
}

.volume-control {
    display: none;
}

.vagalume a {
    color: #fff;
    text-decoration: underline;
}

.lyrics {
    text-transform: uppercase;
    text-decoration: underline;
    color: #fff;
    font-size: 1em;
    font-weight: 400;
    outline: none;
    transition: .3s;
}

.lyrics:active {
    text-decoration: none;
    color: #fff;
}

.lyrics:visited {
    text-decoration: none;
    color: #fff;
}

.modal-content {
    background-color: rgba(0, 0, 0, 0.8);
    color: #fff !important;
    border-radius: 0;
}

.modal-content .btn {
    border-radius: 0;
}

/* Chrome */
input[type=range] {
    -webkit-appearance: none;
    width: 100%;
}

input[type=range]:focus {
    outline: none;
}

input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animate: 0.2s;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    background: transparent;
}

input[type=range]::-webkit-slider-thumb {
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -8px;
}

/* Firefox */
input[type=range]::-moz-range-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animate: 0.2s;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    background: #fff;
}

input[type=range]::-moz-range-thumb {
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    border: 0px solid #000000;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
}

/* IE e Edge */
input[type=range]::-ms-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animate: 0.2s;
    background: transparent;
    border-color: transparent;
    border-width: 10px 0;
    top: -10px;
    color: transparent;
}

input[type=range]::-ms-fill-lower {
    background: #fff;
    border: 0px solid #000101;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
}

input[type=range]::-ms-fill-upper {
    background: #fff;
    border: 0px solid #000101;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
}

input[type=range]::-ms-thumb {
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    border: 0px solid #000000;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
}


.historic h2 {
    color: #fff;
    border-bottom: 2px solid #fff;
    font-size: 16px;
    font-weight: bold;
    text-transform: uppercase;
    margin: 10px 0;
}

.historic article {
    margin: 5px 0;
}

.historic .cover-historic {
    width: 95px;
    height: 95px;
    margin-right: 15px;
    float: left;
    background: url('../img/bg-capa.jpg') no-repeat;
    background-size: cover;
    border: 1px solid #383838;
    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
    transition: background-image 1s;
}

.historic .music-info {
    color: #fff;
    font-family: 'Share', sans-serif;
}

.historic .music-info .song {
    width: 100%;
    font-weight: bold;
    font-size: 20px;
    text-transform: uppercase;
    margin-bottom: -5px;
}

@media(max-width: 370px) {
    .cover-album {
        max-width: 100%;
    }
}

@media(min-width: 576px) {
    .volume-control {
        display: flex;
    }

    .call-lyrics {
        margin-top: 20px;
    }
}

@media(min-width: 768px) {
    body {
        align-items: center;
    }

    .h1-logo {
        text-align: center;
    }

    .logo {
        display: block;
        z-index: 2;
    }

    .logo img {
        max-width: 200px;
    }

    .web-player {
        height: auto;
        margin-top: 0;
    }

    .cover-album {
        margin: 10px auto;
        min-width: 320px;
        height: 320px;
    }

    .logo img {
        max-width: 300px;
        margin: 65px 0;
    }

    .info-current-song {
        margin-top: 50px;
        text-align: left;
    }

    .volume-control {
        margin-top: 10%;
    }
}

